Mon Nov 19 02:56:58 2007  Jiri (George) Lebl <jirka@5z.com>

	* src/symbolic.c: add erf derivative

Sun Nov 18 14:48:56 2007  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: fix building with no gtksourceview 

Sat Nov 17 21:27:26 2007  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: use GTK_STOCK_DIALOG_INFO instead of
	  GTK_STOCK_INFO, as the latter is only available in 2.8 and higher
	  gtk, thus making genius implicitly depend on 2.8

	* ve/Makefile.am: don't use -l to link to the viciouslib but link it
	  directly

Fri Nov 16 23:36:57 2007  Jiri (George) Lebl <jirka@5z.com>

	* Release 1.0.1

Fri Nov 16 23:10:29 2007  Jiri (George) Lebl <jirka@5z.com>

	* gtkextra/gtkplot.[ch]: add freeze/thaw functions since otherwise
	  we may hang and eat all memory on recalculating ticks needlessly
	  when changing both range and ticks.

	* src/graphing.c: use freeze/thaw to avoid hangs and huge memory
	  leaks.  On parametric plots, squish the graph a little and move
	  the legend below the plot.

	* NEWS: update

Fri Nov 16 00:50:48 2007  Jiri (George) Lebl <jirka@5z.com>

	* lib/calculus/sums_proucts.gel: increase default sum and product
	  tries to 10000, since 200 was just not cutting it.

Thu Nov 15 23:30:51 2007  Jiri (George) Lebl <jirka@5z.com>

	* src/calc.c: Much nicer pretty printing of matrices.  Rather
	  than using tabs, use commas and align elements successive rows.
	  Both nicer, more readable (when MixedFractions is on) and more
	  compact way of seeing matrices.  Yay!

	* src/lexer.l: drop the tab support for entering matrices.  Not only
	  was it stupid, it didn't work on the command line

	* src/funclib.c: fix print, printn and display functions to not follow
	  the line length limits like normal output

	* src/calc.c: when pretty printing a matrix, only print the leading
	  newline if we are not in fact on the start of a line

	* configure.in: check for svn rather than cvs to add extra warnings
