@@ -1,3 +1,8 @@
+Mon Nov 19 03:21:44 2007  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/mpwrap.c, src/funclib.c: slight optimization by using
+	  mpfr_zero_p
+
 Mon Nov 19 02:56:58 2007  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/symbolic.c: add erf derivative
